<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/p16dp"
    android:paddingTop="@dimen/p16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="RtlSymmetry">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="s"
        android:contentDescription="@string/imageview" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/video_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivImage"
        app:layout_constraintTop_toTopOf="@id/ivImage" />

    <TextView
        android:id="@+id/tvVideoDuration"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/p16dp"
        android:text="@string/video_duration"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivImage"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>