<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.video.VideoActivity">

    <include
        android:id="@+id/no_internet"
        layout="@layout/activity_no_internet"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/video_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/playlist"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/toolbarBack"
                android:drawablePadding="-8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:text="@string/back"
                android:textColor="@color/red"
                app:drawableStartCompat="@drawable/ic_back" />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/view_line"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view_line"
            android:layout_marginTop="5dp">

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/exo_player"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:layout_constraintTop_toTopOf="parent"
                android:keepScreenOn="true"
                app:show_shuffle_button="false"
                app:use_controller="true" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/player">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="328dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/video_title"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_download"
                android:layout_width="142dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="16dp"
                    android:text="@string/download"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/ggg"
                    android:src="@drawable/ic_baseline_download_for_offline_24" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_info_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/desc_full_text"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>