<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <include
        android:id="@+id/no_internet"
        layout="@layout/activity_no_internet"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main.appbar"
            android:layout_width="match_parent"
            android:layout_height="252dp"
            android:background="@color/white_1"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/main.collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/white_1"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/toolbar_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed"
                        >

                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/main.toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:background="@color/white"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/toolbarTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/playlist"
                                android:textColor="@color/red"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/toolbarBack"
                                android:drawablePadding="-8dp"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:gravity="center"
                                android:paddingHorizontal="12dp"
                                android:text="@string/back"
                                android:textColor="@color/red"
                                app:drawableStartCompat="@drawable/ic_back" />
                        </androidx.appcompat.widget.Toolbar>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        app:layout_constraintTop_toBottomOf="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/view_color" />

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_text"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/black_for_text"
                        android:scaleType="centerCrop"
                        android:fitsSystemWindows="true"
                        app:layout_collapseMode="parallax"
                        android:layout_marginTop="24dp"
                        android:layout_marginHorizontal="@dimen/p16dp"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:id="@+id/tvDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description_text"
                        android:textSize="16sp"
                        android:textColor="@color/gray_detail_text"
                        android:scaleType="centerCrop"
                        android:fitsSystemWindows="true"
                        app:layout_collapseMode="parallax"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="@dimen/p16dp"
                        android:layout_marginEnd="@dimen/p16dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="@dimen/p10dp" />

                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvVideoCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_video_series"
                    android:layout_marginStart="@dimen/p16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDetailList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_detail"
                    android:layout_marginTop="@dimen/p16dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_margin="20dp"
            android:backgroundTint="@color/red"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:tint="@color/white"
            app:layout_anchor="@id/main.appbar"
            app:layout_anchorGravity="bottom|right|end"
            tools:ignore="ContentDescription" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>